--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOo3R+qvalR9O0NuIBfQE3Z",
+      "authorship_tag": "ABX9TyM16VcrOrju/2xxF72YcUrn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,12 +131,12 @@
         "dftrain.head()"
       ],
       "metadata": {
-        "id": "UGd-qghvydQ-",
-        "outputId": "9cfb4dbd-07ce-4337-813c-5a6b38920c97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "UGd-qghvydQ-",
+        "outputId": "9cfb4dbd-07ce-4337-813c-5a6b38920c97"
       },
       "execution_count": 3,
       "outputs": [
@@ -481,12 +481,12 @@
         "dftrain.describe()"
       ],
       "metadata": {
-        "id": "ZnfFCX3kyirw",
-        "outputId": "37566575-76c4-42e9-8459-3e4d8cdfc96e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "ZnfFCX3kyirw",
+        "outputId": "37566575-76c4-42e9-8459-3e4d8cdfc96e"
       },
       "execution_count": 4,
       "outputs": [
@@ -817,11 +817,11 @@
         "dftrain.shape"
       ],
       "metadata": {
-        "id": "dDeLtWESyko8",
-        "outputId": "1e661327-b2d6-4727-eb46-c62cb2b915d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dDeLtWESyko8",
+        "outputId": "1e661327-b2d6-4727-eb46-c62cb2b915d2"
       },
       "execution_count": 5,
       "outputs": [
@@ -843,12 +843,12 @@
         "y_train.head()"
       ],
       "metadata": {
-        "id": "3UvmN5WXynFv",
-        "outputId": "2e073372-6bd9-435d-ffeb-3398a329026f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        }
+        },
+        "id": "3UvmN5WXynFv",
+        "outputId": "2e073372-6bd9-435d-ffeb-3398a329026f"
       },
       "execution_count": 6,
       "outputs": [
@@ -922,12 +922,12 @@
         "dftrain.age.hist(bins=20)"
       ],
       "metadata": {
-        "id": "jyE6vf9ryotD",
-        "outputId": "151add25-81bd-45d3-8bd9-bb0ec9a80d85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
-        }
+        },
+        "id": "jyE6vf9ryotD",
+        "outputId": "151add25-81bd-45d3-8bd9-bb0ec9a80d85"
       },
       "execution_count": 7,
       "outputs": [
@@ -959,12 +959,12 @@
         "dftrain.sex.value_counts().plot(kind='barh')"
       ],
       "metadata": {
-        "id": "nMoczwNgyqaA",
-        "outputId": "b4f4aa70-aab1-4848-a41a-2ead053630e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
-        }
+        },
+        "id": "nMoczwNgyqaA",
+        "outputId": "b4f4aa70-aab1-4848-a41a-2ead053630e6"
       },
       "execution_count": 8,
       "outputs": [
@@ -996,12 +996,12 @@
         "dftrain['class'].value_counts().plot(kind='barh')"
       ],
       "metadata": {
-        "id": "zLfMq6RRysCb",
-        "outputId": "67e09705-461b-4fdf-ebef-e3a0193e6d89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
-        }
+        },
+        "id": "zLfMq6RRysCb",
+        "outputId": "67e09705-461b-4fdf-ebef-e3a0193e6d89"
       },
       "execution_count": 9,
       "outputs": [
@@ -1033,12 +1033,12 @@
         "pd.concat([dftrain, y_train], axis=1).groupby('sex').survived.mean().plot(kind='barh').set_xlabel('% survive')"
       ],
       "metadata": {
-        "id": "LaBfFoaIyttN",
-        "outputId": "39080fef-cc74-4ebe-d19b-0889cd3ce7f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 467
-        }
+        },
+        "id": "LaBfFoaIyttN",
+        "outputId": "39080fef-cc74-4ebe-d19b-0889cd3ce7f4"
       },
       "execution_count": 10,
       "outputs": [
@@ -1089,11 +1089,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "fWU1_o_yyvPq",
-        "outputId": "e93c1ed8-a20e-40c8-bdbe-6a23e5bab36f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fWU1_o_yyvPq",
+        "outputId": "e93c1ed8-a20e-40c8-bdbe-6a23e5bab36f"
       },
       "execution_count": 17,
       "outputs": [
@@ -1119,9 +1119,40 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Combine into one tensor\n",
+        "x = tf.keras.layers.concatenate(preprocessing_layers)\n",
+        "\n",
+        "preprocessing_model = tf.keras.Model(inputs=inputs, outputs=x)\n",
+        "preprocessed_output = preprocessing_model(inputs)\n",
+        "print(preprocessed_output)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6qfzED6Jy7Ns",
+        "outputId": "2dcc9563-b1cd-4617-c930-0f553ee9b52b"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<KerasTensor shape=(None, 9), dtype=float32, sparse=False, name=keras_tensor_43>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "6qfzED6Jy7Ns"
+        "id": "SJTuhSFwAQZm"
       },
       "execution_count": null,
       "outputs": []
