--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM16VcrOrju/2xxF72YcUrn",
+      "authorship_tag": "ABX9TyMiYxJQ6YW2lON6+Cd0hNuk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1124,27 +1124,247 @@
         "x = tf.keras.layers.concatenate(preprocessing_layers)\n",
         "\n",
         "preprocessing_model = tf.keras.Model(inputs=inputs, outputs=x)\n",
-        "preprocessed_output = preprocessing_model(inputs)\n",
-        "print(preprocessed_output)"
+        "preprocessed_output = preprocessing_model(dict(dftrain))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6qfzED6Jy7Ns",
-        "outputId": "2dcc9563-b1cd-4617-c930-0f553ee9b52b"
+        "outputId": "f246a152-0d9d-46e3-ce51-b982ec83758b"
       },
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<KerasTensor shape=(None, 9), dtype=float32, sparse=False, name=keras_tensor_43>"
+              "<KerasTensor shape=(None, 9), dtype=float32, sparse=False, name=keras_tensor_48>"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# use output of preprocessing model\n",
+        "x = preprocessing_model.output\n",
+        "output = tf.keras.layers.Dense(1, activation='sigmoid')(x)\n",
+        "model = tf.keras.Model(inputs=preprocessing_model.input, outputs=output)\n",
+        "model"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SJTuhSFwAQZm",
+        "outputId": "4be9b0ed-3d83-445f-cd18-30b54d32b109"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Functional name=functional_5, built=True>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for col in CATEGORICAL_COLUMNS:\n",
+        "    dftrain[col] = dftrain[col].astype(\"string\")\n",
+        "    dfeval[col] = dfeval[col].astype(\"string\")\n",
+        "\n",
+        "dftrain.dtypes"
+      ],
+      "metadata": {
+        "id": "YPYrVvwycIp0",
+        "outputId": "4d1c6550-2487-4507-e87b-f845d5eaaf50",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 366
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "sex                   string[python]\n",
+              "age                          float64\n",
+              "n_siblings_spouses             int64\n",
+              "parch                          int64\n",
+              "fare                         float64\n",
+              "class                 string[python]\n",
+              "deck                  string[python]\n",
+              "embark_town           string[python]\n",
+              "alone                 string[python]\n",
+              "dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>sex</th>\n",
+              "      <td>string[python]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>age</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>n_siblings_spouses</th>\n",
+              "      <td>int64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>parch</th>\n",
+              "      <td>int64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>fare</th>\n",
+              "      <td>float64</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>class</th>\n",
+              "      <td>string[python]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>deck</th>\n",
+              "      <td>string[python]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>embark_town</th>\n",
+              "      <td>string[python]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>alone</th>\n",
+              "      <td>string[python]</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+        "model.fit(x=dict(dftrain), y=y_train, epochs=15, batch_size=32)\n"
+      ],
+      "metadata": {
+        "id": "GzTa4SY_ab4n",
+        "outputId": "32edbe22-618c-42ab-e28f-f21ac965a38a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step - accuracy: 0.6521 - loss: 0.6968\n",
+            "Epoch 2/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.5919 - loss: 0.7549\n",
+            "Epoch 3/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.6191 - loss: 0.6971\n",
+            "Epoch 4/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.6212 - loss: 0.7011\n",
+            "Epoch 5/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.6200 - loss: 0.7107\n",
+            "Epoch 6/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.6220 - loss: 0.7078\n",
+            "Epoch 7/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.6354 - loss: 0.6923\n",
+            "Epoch 8/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.6531 - loss: 0.6763  \n",
+            "Epoch 9/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.6693 - loss: 0.6448 \n",
+            "Epoch 10/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.6314 - loss: 0.6933 \n",
+            "Epoch 11/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.6428 - loss: 0.6612 \n",
+            "Epoch 12/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.6249 - loss: 0.6685 \n",
+            "Epoch 13/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.6409 - loss: 0.6609 \n",
+            "Epoch 14/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.6354 - loss: 0.6483\n",
+            "Epoch 15/15\n",
+            "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.6405 - loss: 0.6458 \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7c8c9a304490>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = model.evaluate(x=dict(dfeval), y=y_eval, return_dict=True)\n",
+        "print(result['accuracy'])\n"
+      ],
+      "metadata": {
+        "id": "mH4rlYSqbWxW",
+        "outputId": "f4c63b56-3da2-45c5-f77a-fa2f4d423498",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m9/9\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.6560 - loss: 0.6315  \n",
+            "0.6780303120613098\n"
+          ]
         }
       ]
     },
@@ -1152,7 +1372,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "SJTuhSFwAQZm"
+        "id": "YLmiqm4wc48n"
       },
       "execution_count": null,
       "outputs": []
